# carpuzzle

./: .gitignore  README.md  main.py  pyproject.toml  visualization.ipynb
carpuzzle/: board.py  slice.py  solver.py  tile.py
data/: data.tsv
